--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
               <li><span class="age">12</span>스즈메의 문단속</li>
               <li>
                 <span>예매율 1위</span>
-                <span class="star"><p class="star_rate"></p></span>
+                <div class="star"><p class="star_rate"></p></div>
               </li>
             </ul>
           </div>
@@ -319,7 +319,7 @@
             <li>상영시간 122분</li>
             <li>
               <span>예매율 1위</span>
-              <span class="star"><p class="star_rate"></p></span>
+              <div class="star"><p class="star_rate"></p></div>
             </li>
             <li class="more"><a href="#" title="스즈메의 문단속">예매하기</a></li>
             </ul>
@@ -396,7 +396,7 @@
               <li><span class="age">12</span>아임 히어로 더 파이널</li>
               <li>
                 <span>예매율 2위 </span>
-                <span class="star"><p class="star_rate"></p></span>
+                <div class="star"><p class="star_rate"></p></div>
               </li>
             </ul>
           </div>
@@ -412,7 +412,7 @@
             <li>상영시간: 102분</li>
             <li>
               <span> 예매율 2위</span>
-              <span class="star"><p class="star_rate"></p></span>
+              <div class="star"><p class="star_rate"></p></div>
             </li>
             <li class="more"><a href="#" title="아임 히어로 더 파이널">예매하기</a></li>
             </ul>
