--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         </a>
         <div>
           <div class="detail">
-            <h3><img src="images/20210510_17953c934df51.png" alt="CJONSTYLE" /></h3>
+            <h3><img src="images/20210510_17953c934df51.png" alt="CJONSTYLE"></h3>
             <ul>
             <li>(에싸) 클로에 3인 스윙기능 리브 패브릭 소파+스툴</li>
             <li>1,849,000원</li>
@@ -373,12 +373,12 @@
         <a href="#">
           <span><img src="images/2012040860L.jpg" alt="(백화점동일) 엘리자베스 스튜어트 천연가죽 페니로퍼" /></span>
           <div>
-            <h3><img src="images/20210510_17953c934df51.png" alt="CJONSTYLE" /></h3>
+            <h3><img src="images/20210510_17953c934df51.png" alt="CJONSTYLE"></h3>
           </div>
         </a>
         <div>
           <div class="detail">
-            <h3><img src="images/20210510_17953c934df51.png" alt="CJONSTYLE" / ></h3>
+            <h3><img src="images/20210510_17953c934df51.png" alt="CJONSTYLE" ></h3>
             <ul>
             <li>(백화점동일) 엘리자베스 스튜어트 천연가죽 페니로퍼</li>
             <li>179,000원</li>
