--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!-- 1 -->
     <section class="white">
       <div>
-        <h3 ><img src="images/20230306_186b44e931331.png" alt="CJONSTYLE"></h3>
+        <h3><img src="images/20230306_186b44e931331.png" alt="CJONSTYLE"></h3>
         <ul>
         <li>23년 홈리빙페어 오픈 <br />
             인테리어 최대 혜택! <br />
@@ -132,7 +132,7 @@
     <!-- 3 -->
     <section>
       <div>
-        <h3 ><img src="images/20230103_18574cfc9fe41.png" alt="CJONSTYLE"></h3>
+        <h3><img src="images/20230103_18574cfc9fe41.png" alt="CJONSTYLE"></h3>
         <ul>
         <li>CJ ONE WEEK<br />
           빛의 벙커<br />
@@ -148,7 +148,7 @@
     <!-- 4 -->
     <section>
       <div>
-        <h3 ><img src="images/20230103_18574cfc9fe41.png" alt="CJONSTYLE"></h3>
+        <h3><img src="images/20230103_18574cfc9fe41.png" alt="CJONSTYLE"></h3>
         <ul>
         <li>CJ ONE WEEK<br />
           석파정 서울미술관<br />
@@ -194,8 +194,8 @@
       <a href="#">
         <span class="quick2"></span>
         <dl>
-        <dt>포인트 % 적립처 안내</dt>
-        <dd>구매 시 ONE 포인트 꼭! % 적립하세요</dd>
+        <dt>포인트 적립처 안내</dt>
+        <dd>구매 시 ONE 포인트 꼭! 적립하세요</dd>
         </dl>
       </a>
     </li>
@@ -204,7 +204,7 @@
         <span class="quick3"></span>
         <dl>
         <dt>보너스포인트 안내</dt>
-        <dd>추가 % 적립 포인트 혜택을 받으세요</dd>
+        <dd>추가 적립 포인트 혜택을 받으세요</dd>
         </dl>
       </a>
     </li>
@@ -230,7 +230,7 @@
         <a href="#">
           <span><img src="images/0000002620.jpg" alt="불짬뽕 유부 김밥" /></span>
           <div>
-            <h3><img src="images/20180803_1419261.png" alt="CJ 제일제당" /></h3>
+            <h3><img src="images/20180803_1419261.png" alt="CJ 제일제당"></h3>
             <ul>
             <li>불짬뽕 유부 김밥</li>
             </ul>
@@ -238,7 +238,7 @@
         </a>
         <div>
           <div class="detail">
-            <h3><img src="images/20180803_1419261.png" alt="CJ 제일제당" /></h3>
+            <h3><img src="images/20180803_1419261.png" alt="CJ 제일제당"></h3>
             <ul>
             <li>불짬뽕 유부 김밥</li>
             <li>메뉴 : 김밥/샌드위치</li>
@@ -261,7 +261,7 @@
         </a>
         <div>
           <div class="detail">
-            <h3><img src="images/20180803_1419261.png" alt="CJ 제일제당" /></h3>
+            <h3><img src="images/20180803_1419261.png" alt="CJ 제일제당"></h3>
             <ul>
             <li>한우 꼬리 고기국수</li>
             <li>메뉴 : 국/탕/찌개/전골</li>
@@ -285,7 +285,7 @@
         </a>
         <div>
           <div class="detail">
-            <h3><img src="images/20190703_0846591.png" alt="CJ THE MARKET" /></h3>
+            <h3><img src="images/20190703_0846591.png" alt="CJ THE MARKET"></h3>
             <ul>
             <li>비비고 김치 왕교자 420gx2개x2개</li>
             <li>할인가 13,173원</li>
@@ -311,7 +311,7 @@
         </a>
         <div>
           <div class="detail">
-            <h3><img src="images/20160808_1934261.png" alt="CGV" /></h3>
+            <h3><img src="images/20160808_1934261.png" alt="CGV"></h3>
             <ul>
             <li><span class="age">12</span> <span>스즈메의 문단속</span></li>
             <li>누적관객수 : 699,890명</li>
@@ -331,12 +331,12 @@
         <a href="#">
           <span><img src="images/20220907153226554.jpg" alt="고메 치즈 핫도그"></span>
           <div>
-            <h3><img src="images/20190703_0846591.png" alt="CJ THE MARKET" /></h3>
+            <h3><img src="images/20190703_0846591.png" alt="CJ THE MARKET"></h3>
           </div>
         </a>
         <div>
           <div class="detail">
-            <h3><img src="images/20190703_0846591.png" alt="CJ THE MARKET" /></h3>
+            <h3><img src="images/20190703_0846591.png" alt="CJ THE MARKET"></h3>
             <ul>
             <li>고메 치즈크리스피핫도그 340gX2개</li>
             <li>할인가 11,853원</li>
@@ -378,7 +378,7 @@
         </a>
         <div>
           <div class="detail">
-            <h3><img src="images/20210510_17953c934df51.png" alt="CJONSTYLE" ></h3>
+            <h3><img src="images/20210510_17953c934df51.png" alt="CJONSTYLE"></h3>
             <ul>
             <li>(백화점동일) 엘리자베스 스튜어트 천연가죽 페니로퍼</li>
             <li>179,000원</li>
@@ -404,7 +404,7 @@
         </a>
         <div>
           <div class="detail">
-            <h3><img src="images/20160808_1934261.png" alt="CGV" /></h3>
+            <h3><img src="images/20160808_1934261.png" alt="CGV"></h3>
             <ul>
             <li><span class="age">12</span> 아임 히어로 더 파이널</li>
             <li>누적관객수 : 178,642명</li>
